worked on positioning

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       color: white;
     }
     
+    #Home {
+      display: block;
+      clear: both;
+      width: 100%;
+    }
     #Home img {
       width: 50%;
       display: inline;
