added padding on the right

--- a/index.html
+++ b/index.html
@@ -75,13 +75,16 @@
       background-color: #9D94C5;
     }
       
-     #Home .Text {
+    #Home .Text {
       display: inline;
-      width: 40%
+      width: 40%;
+      padding-right: 2em;
     }
+      
     #Home p {
       margin-left: 1em;
       margin-bottom: 0;
+      font-size: 1em;
     }
 
    #Home h1 {
