--- a/index.html
+++ b/index.html
@@ -75,22 +75,24 @@
       background-color: #9D94C5;
     }
       
-    #Home .Text {
-      width: 30%;
-      display: inline;
-      padding-right: 2em;
-    }
-      
-    #Home p {
-      margin-left: 1em;
-      margin-bottom: 0;
-      font-size: 1em;
-    }https://raw.githubusercontent.com/wxywhen/hyperfixation-station-website/main/bocchi%20the%20rock.png
+#Home .Text {
+  display: inline-block; 
+  width: 40%;
+  padding-right: 2em; 
+  box-sizing: border-box; 
+  clear: both; 
+}
 
-   #Home h1 {
-    margin-top: 0;
-    margin-bottom: 0; 
-    font-size: 2em; 
+#Home p {
+  margin-left: 1em;
+  margin-bottom: 0;
+}
+
+#Home h1 {
+  margin-left: 0.5em;
+  margin-top: 0;
+  margin-bottom: 0; 
+  font-size: 2em; 
   }
 
     </style>
