added google fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>hyperfixation station</title>
     <meta charset="UTF-8">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Fustat:wght@200..800&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
     <style>
       /*colour palette hex codes:
       dark purple: #676182
@@ -29,6 +31,7 @@
     #Logo {
       float: left;
       padding-top: 0.5em;
+      margin-left: 2em;
     }
 
     #Logo a {
@@ -36,11 +39,14 @@
       color: #E6E2F2;
       text-decoration: none;
       font-size: 1.5em;
+      font-family: "Fragment Mono", monospace;
+      font-weight: 400;
+      font-style: normal;
     }
 
     #Menu {
       list-style-type: none;
-      margin: 0;
+      margin: 0 2em 0 0;
       padding: 0;
       float: right;
     }
@@ -55,7 +61,12 @@
       color: #E6E2F2;
       text-align: center;
       padding: 1em 0.5em;
-      text-decoration: none;
+      text-decoration: none;  
+      font-family: "Handjet", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: <weight>;
+      font-style: normal;
+      font-variation-settings: "ELGR" 1,"ELSH" 2;
     }
 
     #Menu li a:hover {
@@ -83,11 +94,16 @@
       padding-right: 2em; 
       box-sizing: border-box; 
       clear: both; 
+      color: #676182;
     }
 
     #Home p {
       margin-left: 1em;
       margin-bottom: 0;
+      font-family: "Fustat", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: <weight>;
+      font-style: normal;
     }
 
     #Home h1 {
@@ -95,6 +111,9 @@
       margin-top: 0;
       margin-bottom: 0; 
       font-size: 2em; 
+      font-family: "Fragment Mono", monospace;
+      font-weight: 400;
+      font-style: normal;
     }
     
       #K-pop {
