--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
         font-style: normal;
         font-variation-settings: "ELGR" 1, "ELSH" 2;
         font-size: 4em;
-        padding-top: 0.5em;
+        padding-top: 0;
         margin: 0;
       }
 
       .MainTitleInfo {
-        padding-top: 1em;
+        padding-top: 0.5em;
         margin: 0;
         color: #E6E2F2;
         font-family: "Fustat", sans-serif;
@@ -215,17 +215,18 @@
       .leftcolumn {
         float: left;
         width: 50%;
-        margin-left: 6em;
+        margin-left: 7em;
         margin-top: 2em;
       }
 
       .leftcolumn img {
-        width: 80%;
-        height: auto;
+        width: 500px;
+        height: 500px;
         object-fit: cover;
         border-radius: 50px;
         border: 1px solid #FDFFF3;
-        padding: 0;      }
+        padding: 0;      
+      }
 
       .rightcolumn {
         float: left;
@@ -247,6 +248,7 @@
       
 .videocolumns-wrapper {
   text-align: center; 
+  margin-bottom: 4em;
 }
 
 .videocolumn {
@@ -272,8 +274,8 @@
 
       hr {
         width: 100%;
-        height: 2px;
-        color: #E6E2F2;
+        height: 1px;
+        background-color: #E6E2F2;
       }
       
       #Footer {
