started adding table

--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
         color: #9D94C5;
         font-family: "Fustat", sans-serif;
         font-weight: 600;
-        font-size: 2.5em;
+        font-size: 4em;
         border-radius: 10px;
         font-style: italic;
         padding: 0.2em;
         text-align: center;
         display: inline-block;
-        width: 300px;
+        width: 500px;
       }
 
       .imageleft,
       .imageright {
-        padding: 1em;
-        width: 50px;
+        padding: 3em;
+        width: 100px;
         height: auto;
         vertical-align: middle;
       }
@@ -249,6 +249,7 @@
 .videocolumns-wrapper {
   text-align: center; 
   margin-bottom: 4em;
+  clear: both;
 }
 
 .videocolumn {
@@ -278,6 +279,20 @@
         background-color: #E6E2F2;
       }
       
+      table {
+  background-color: #FDFFF3;
+  color: #676182;
+  font-family: "Fustat", sans-serif;
+  border-collapse: collapse;
+  width: 60%;
+  text-align: center;
+}
+
+td, th {
+  border: 1px solid #9D94C5;
+  text-align: center;
+  padding: 8px;
+}
       #Footer {
         background-color: #676182;
         text-align: center;
@@ -417,6 +432,23 @@ A chill (but fun) song that compares the cycle of wasting time on Tik Tok to a t
 Using a <a href="https://g.co/kgs/SGXvWwa" target=" ">random number generator </a> from the Internet, set the range from 1-10 and let fate decide what your song recommendation of the day will be!
         </p>
       </div>
+ <table>
+  <tr>
+    <th>Track #</th>
+    <th>Song Name</th>
+    <th>Artist Name</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>Shine (Feat. SUMIN)</td>
+    <td>YUGYEOM</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Moonlight</td>
+    <td>LOOSSEMBLE</td>
+  </tr>
+</table>
     </div>
 
     <div id="K-dramas"></div>
