--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
   border-collapse: collapse;
   width: 60%;
   text-align: center;
+        margin: 2em auto;
 }
 
 td, th {
@@ -295,7 +296,7 @@ td, th {
 }
       #Footer {
         background-color: #676182;
-        text-align: center;
+       text-align: center;
         padding: 5%;
       }
     </style>
