started kdrama section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
         padding: 0.2em;
         text-align: center;
         display: inline-block;
-        width: 500px;
       }
 
       .imageleft,
@@ -434,7 +433,7 @@
       </div>
       <hr>
       <div class="leftcolumn">
-        <h2 class="SectionTitle">*Random Song Picker*</h2>
+        <h2 class="SectionTitle">*Random Song Rec Picker*</h2>
         <img src="chuu dancing.gif" alt="moving image of long haired girl dancing while holding a mic">
 
 
@@ -442,7 +441,7 @@
       <div class="rightcolumn">
         <p>
           <b>Intructions:</b><br>
-          Using a <a href="https://g.co/kgs/SGXvWwa" target=" ">random number generator </a> from the Internet, set the range from 1-10 and let fate decide what your song recommendation of the day will be!
+          Using a <a href="https://g.co/kgs/SGXvWwa" target=" ">random number generator </a> from the Internet, set the range from 1-10 and let fate decide what your song recommendation of the day will be! See your random playlist below:
         </p>
       </div>
       <div class="centered">
@@ -510,7 +509,16 @@
 
     </div>
 
-    <div id="K-dramas"></div>
+    <div id="K-dramas">
+      <div class="TitleWrapper">
+       <div class="PageTitle">
+        K-DRAMA KAROUSEL
+      </div>
+      </div>
+
+    
+    </div>
+    
     <div id="Anime"></div>
     <div id="Chinese Shows"></div>
     <div id="Other Recs"></div>
