move table positioning back to the side

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
         color: #FDFFF3;
         margin: 0;
         padding-top: 2em;
+        padding-bottom: 2em;
         font-family: "Fustat", sans-serif;
         font-weight: 400;
         font-size: 1em;
@@ -299,23 +300,17 @@
         font-size: 1.5em;
       }
 
-      .centered {
-        text-align: center;
-        margin: 2em auto;
-        padding: 4em;
-        clear: both;
-      }
-
-      .centered table {
+      table {
         background-color: #FDFFF3;
         color: #676182;
         font-family: "Fustat", sans-serif;
         border-collapse: collapse;
-        width: 40%;
+        width: 30%;
         text-align: center;
-        margin: 2em auto;
+        margin-top: 2em;
+        margin-bottom: 5em;
         padding: 4em;
-        clear: both;
+
       }
 
       td,
@@ -487,7 +482,7 @@
 
         <div class="videocolumn">
           <h4>Funny Tech Glitches</h4>
-          <iframe width="250" height="200" src="https://www.youtube.com/embed/7CEul1Oq3Ls?si=0YZf0Eyvn3mJUO97" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="300" height="250" src="https://www.youtube.com/embed/7CEul1Oq3Ls?si=0YZf0Eyvn3mJUO97" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <h4>Song Medley</h4>
           <iframe width="300" height="250" src="https://www.youtube.com/embed/LDemgZcBj7o?si=ZTlifKhm3odv6mp2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
@@ -544,7 +539,7 @@
           Using a <a href="https://g.co/kgs/SGXvWwa" target=" ">random number generator </a> from the Internet, set the range from 1-10 and let fate decide what your song recommendation of the day will be! See your random playlist below:
         </p>
       </div>
-      <div class="centered">
+      
         <div class="MainTitle">
           Random Playlist
         </div>
@@ -605,7 +600,6 @@
             <td>KARA</td>
           </tr>
         </table>
-      </div>
 
     </div>
 
