--- a/index.html
+++ b/index.html
@@ -319,7 +319,6 @@
       }
       
       #K-pop .videocolumns-wrapper::after, #Anime .videocolumns-wrapper::after {
-        text-align: center;
         margin-bottom: 4em;
         content: "";
         display: table;
@@ -328,6 +327,8 @@
 
       #K-pop .videocolumn, #Anime .videocolumn{
         display: inline-block;
+        text-align: center;
+        float: left;
         width: 40%;
         margin: 2em 3%;
       }
