make sure nav bar is full width

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       }
 
       #Nav {
+        width: 100%;
         background-color: #676182;
         overflow: hidden;
         padding: 1em;
@@ -170,6 +171,7 @@
       #K-pop,
       #Anime,
       #ContactUs {
+        width: 100%;
         background-color: #9D94C5;
         overflow: hidden;
         margin-top: 2em;
