fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
         <p><b>Hello! Welcome to</b></p>
         <h1>hyperfixation station (&gt;_&lt;)</h1>
         <p>My crystal ball is telling me that you are an introvert who loves to fangirl. Well, you’ve arrived at the right place!</p>
-        <p>Here is where you can find the best picks for Asian media, including music, TV shows, and anime. You can think of this place like a little store where you can browse thorough recommendations of things to watch whenever you’re in in need of some real entertainment. <i>Let the nerd-ing out begin!</i></p>
+        <p>Here is where you can find the best picks for Asian media, including music, TV shows, and anime. You can think of this place like a little store where you can browse through recommendations of things to watch whenever you’re in in need of some real entertainment. <i>Let the nerd-ing out begin!</i></p>
       </div>
 
       <div class="QuickLinks">
