--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
         width: 50%;
         margin-left: 8em;
         margin-top: 2em;
+        padding-bottom: 2em;
       }
 
       #K-pop .leftcolumn img,
@@ -342,17 +343,15 @@
 
       #K-pop .videocolumn,
       #Anime .videocolumn {
-        display: inline-block;
         text-align: center;
         float: left;
         margin-left: 5em;
-        margin-top: 3em;
+        margin-bottom: 2em;
         width: 40%;
       }
 
       #K-pop .videocolumns-wrapper::after,
       #Anime .videocolumns-wrapper::after {
-        margin-bottom: 4em;
         content: "";
         display: table;
         clear: both;
@@ -363,7 +362,6 @@
         border-radius: 25px;
         border: 2px solid #FDFFF3;
         padding: 0;
-        margin-bottom: 1em;
       }
 
       #K-pop .videocolumn h4,
@@ -621,13 +619,18 @@
         <div class="videocolumn">
           <h4>Get To Know Plave!</h4>
           <iframe width="300" height="250" src="https://www.youtube.com/embed/axIzlocKfHA?si=7CdkhowDppUn8QHZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="videocolumn">
           <h4>Fav Song Pick: Chroma Drift</h4>
           <iframe width="300" height="250" src="https://www.youtube.com/embed/eHCYzIu-ij4?si=Q_JhKFT3suCZgQl7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-
+      </div>
+      <div class="videocolumns-wrapper">
         <div class="videocolumn">
           <h4>Funny Tech Glitches</h4>
           <iframe width="300" height="250" src="https://www.youtube.com/embed/7CEul1Oq3Ls?si=0YZf0Eyvn3mJUO97" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+          <div class="videocolumn">
           <h4>Song Medley</h4>
           <iframe width="300" height="250" src="https://www.youtube.com/embed/LDemgZcBj7o?si=ZTlifKhm3odv6mp2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
