--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Fustat:wght@200..800&family=Handjet:wght@100..900&display=swap" rel="stylesheet">
+    <!--CITATION FOR YOUTUBE VIDEOS 
+      Code copied from: [https://developers.google.com/youtube/iframe_api_reference]
+      Author: [YouTube]
+      Name: [YouTube Video HTML embed code]
+      Description: [to add external YouTube videos into website]
+      Date retrieved: [04/03/2025]
+      -->
+    <!-- CITATION FOR GOOGLE FORM
+      Code copied from: [https://docs.google.com/forms/d/1GtD0goJnU_u87xlayJLNZOp_zUDWEJ4NkHXXdZqPObc/edit]
+      Author: [Google Forms]
+      Name: [Google Forms HTML embed code]
+      Description: [to add external Google Form into website]
+      Date retrieved: [04/03/2025]
+      -->     
     <style>
       body {
         background-color: #E6E2F2;
