test layout changes

--- a/index.html
+++ b/index.html
@@ -279,7 +279,6 @@
         font-variation-settings: "ELGR" 1, "ELSH" 2;
         font-size: 4em;
         padding-top: 0;
-        margin: 0;
       }
 
       #K-pop .MainTitle,
@@ -306,7 +305,7 @@
       #Anime .leftcolumn {
         float: left;
         width: 50%;
-        margin-left: 8em;
+        margin-left: 10%;
         margin-top: 2em;
         padding-bottom: 2em;
       }
@@ -325,7 +324,6 @@
       #Anime .rightcolumn {
         float: left;
         width: 30%;
-        padding-left: 1em;
         padding-top: 6em;
       }
 
@@ -409,7 +407,7 @@
       }
 
       .row {
-        margin-left: 10em;
+        text-align: center;
       }
 
       .column {
@@ -427,7 +425,7 @@
 
       .column img {
         width: 80%;
-        height: 300px;
+        height: auto;
         object-fit: cover;
         border-radius: 50px;
         border: 1px solid #676182;
@@ -499,9 +497,11 @@
       }
 
       #ContactUs iframe {
-        margin-left: 19%;
-        margin-top: 10%;
-        margin-bottom: 10%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 10%;
+        padding-bottom: 10%;
       }
 
       #Footer {
