test layout again

--- a/index.html
+++ b/index.html
@@ -407,7 +407,8 @@
       }
 
       .row {
-        text-align: center;
+        margin: auto;
+        width: 100%;
       }
 
       .column {
@@ -425,7 +426,7 @@
 
       .column img {
         width: 80%;
-        height: auto;
+        height: 400px;
         object-fit: cover;
         border-radius: 50px;
         border: 1px solid #676182;
@@ -434,7 +435,7 @@
 
       .column h2 {
         font-family: "Handjet", sans-serif;
-        font-optical-sizing: auto;
+      font-optical-sizing: auto;
         font-weight: 400;
         font-style: normal;
         font-variation-settings: "ELGR" 1, "ELSH" 2;
@@ -1344,7 +1345,7 @@
         hyperfixation station
       </h1>
       <p>
-        <i>best viewed on desktop</i><br>
+        <i>best viewed on laptop</i><br>
         created by Wen Ye <br>
         <a href="mailto:wen.ye.wxy@gmail.com" target=" ">wen.ye.wxy@gmail.com</a> <br>
         last updated: April 2025 <br>
