fix margin spacing on title

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
         font-variation-settings: "ELGR" 1, "ELSH" 2;
         font-size: 4em;
         padding-top: 0;
+        margin: 0;
       }
 
       #K-pop .MainTitle,
