make more responsive

--- a/index.html
+++ b/index.html
@@ -305,16 +305,16 @@
       #K-pop .leftcolumn,
       #Anime .leftcolumn {
         float: left;
-        width: 50%;
-        margin-left: 10%;
+        width: 40%;
+        margin-left: 20%;
         margin-top: 2em;
         padding-bottom: 2em;
       }
 
       #K-pop .leftcolumn img,
       #Anime .leftcolumn img {
-        width: 500px;
-        height: 500px;
+        width: 80%;
+        height: 80%;
         object-fit: cover;
         border-radius: 50px;
         border: 1px solid #FDFFF3;
@@ -325,20 +325,20 @@
       #Anime .rightcolumn {
         float: left;
         width: 30%;
-        padding-top: 6em;
+        padding-top: 10em;
+        margin-right: 10%;
       }
 
       #K-pop .rightcolumn p,
       #Anime .rightcolumn p {
         color: #FDFFF3;
         margin: 0;
-        padding-top: 2em;
         padding-bottom: 2em;
         font-family: "Fustat", sans-serif;
         font-weight: 400;
         font-size: 1em;
         font-style: normal;
-        width: 80%;
+        width: 90%;
       }
 
       #K-pop .rightcolumn a {
@@ -671,7 +671,7 @@
         </p>
         <p>
 
-          <b>My Song Pick:</b> Tik Tok<br>
+          <b>My Song Pick:</b> <i> Tik Tok</i><br>
 
           A chill (but fun) song that compares the cycle of wasting time on Tik Tok to a toxic relationship.
 
