try and fix again

--- a/index.html
+++ b/index.html
@@ -306,15 +306,15 @@
       #Anime .leftcolumn {
         float: left;
         width: 40%;
-        margin-left: 20%;
+        margin-left: 10%;
         margin-top: 2em;
         padding-bottom: 2em;
       }
 
       #K-pop .leftcolumn img,
       #Anime .leftcolumn img {
-        width: 80%;
-        height: 80%;
+        width: 400px;
+        height: 400px;
         object-fit: cover;
         border-radius: 50px;
         border: 1px solid #FDFFF3;
@@ -326,6 +326,7 @@
         float: left;
         width: 30%;
         padding-top: 10em;
+        margin-left: 10%;
         margin-right: 10%;
       }
 
