fix apothecary diaries layout

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         font-weight: 400;
         font-size: 1.2em;
         font-style: normal;
-        width: 70%;
+        width: 60%;
       }
 
       #K-dramas .SectionTitle2+p,
@@ -996,6 +996,7 @@
           <b>Released:</b> 2023
         </h4>
       </div>
+      <div class="columns-wrapper">
       <div class="rightcolumn">
         <p>
           <b>About:</b><br>
@@ -1006,7 +1007,7 @@
           The mysteries in this show are unpredictable, yet very logical when they are revealed. With episodes that are seemingly separate stories, we later find out that they are all connected to a bigger storyline. Not to mention, Maomao is one of the greatest female protagonists of all time. We always look forward to what her crazy obsession to medicine and curiosity will lead her to next! (p.s its always funny to see Maomao’s obliviousness towards a certain someone’s feelings towards her)
         </p>
       </div>
-
+      </div>
       <div class="videocolumns-wrapper">
         <div class="videocolumn">
           <h4>Watch The Trailer!</h4>
